# clear-back-end-boilerplate

./: README.md  docker-compose.yml
cargo_workspace/: Cargo.toml
cargo_workspace/db_client/: Cargo.toml
cargo_workspace/db_client/src/: auth.rs  config.rs  context.rs  lib.rs  photo_entries.rs
cargo_workspace/migrations/: 20221224151952_photo_entries.sql  20221226131645_users.sql  20221226131657_authentication_tokens.sql  20221226131730_associate_entries_with_user_ids.sql
cargo_workspace/server/: Cargo.toml
cargo_workspace/server/src/: lib.rs  main.rs
cargo_workspace/server/src/domain/: mod.rs  photo_entries.rs
cargo_workspace/server/src/filters/: mod.rs
cargo_workspace/server/src/filters/app_api/: context.rs  mod.rs  mutation.rs  query.rs
cargo_workspace/server/tests/: test_dummy.rs
cargo_workspace/server/tests/graphql_server/: helpers.rs  main.rs  test_entries.rs
cargo_workspace/test_utils/src/: lib.rs
