[package]
name = "db_client"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-tokio-native-tls" , "postgres", "macros", "offline", "chrono", "migrate"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
uuid = { version = "1", features = ["v4"] }
test_utils = {path = "../test_utils"}
secrecy = { version = "0.8", features = ["serde"] }
argon2 = { version = "0.4", features = ["std"] }
rand = { version = "0.8", features=["std_rng"] }